# roffcpp

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  clang-format.yml
src/: AsciiParser.cpp  AsciiParser.hpp  AsciiTokenizer.cpp  AsciiTokenizer.hpp  BinaryParser.cpp  BinaryParser.hpp  BinaryTokenizer.cpp  BinaryTokenizer.hpp  Parser.cpp  Parser.hpp  Reader.cpp  Reader.hpp  RoffScalar.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
tests/: AsciiTokenizerTests.cpp  BinaryTokenizerTests.cpp  CMakeLists.txt  ReaderTests.cpp  TokenTests.cpp  roffcpptestmain.cpp
tests/testdata/: unexpected_filetype.roff  unsupported_endianness.roff
